# home-assistant-tauron-outages

./: README.md  hacs.json  pyproject.toml
.github/workflows/: validate.yml
custom_components/tauron_outages/: __init__.py  api.py  attributes.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py
custom_components/tauron_outages/translations/: en.json  pl.json
tests_tauron/: test_api.py
