[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tauron-outages"
version = "0.1.0"
description = "Home Assistant custom integration for Tauron Dystrybucja power outages"
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests_tauron"]

